# Onenexium_workstation_agent

./: .gitignore  README.md  pyproject.toml
packaging/: OnenexiumAgent.spec  README-WINDOWS.md
packaging/windows/: Install-OnenexiumAgentPersistence.ps1  Uninstall-OnenexiumAgentPersistence.ps1
src/onenexium_agent/: __main__.py  autostart.py  cli.py  client.py  config.py  config_wizard.py  engine.py  local_store.py  models.py  project_match.py  spawn.py  user_config.py
src/onenexium_agent/collectors/: __init__.py  stub.py  windows.py
src/onenexium_agent/workstation/: __init__.py  constants.py
tests/: test_engine_flag.py  test_local_queue.py  test_project_match.py  test_user_config_load.py
